Fix: Chatbot text overlap on mobile

--- a/frontend/src/sass/_chatbot.scss
+++ b/frontend/src/sass/_chatbot.scss
@@ -52,7 +52,7 @@
   }
   .react-chatbot-kit-chat-bot-message-container {
     position: relative;
-    padding-left: 1rem;
+    padding-left: 5rem;
     margin: 1.5625rem 0;
 
     @media (min-width: 640px) {
